# leap-phase2-pqc-payment-sim

./: README.md  pyproject.toml  requirements-quantum.txt  requirements.txt
docs/: PHASE2_NOTES.md
results/: example_hybrid.json  example_pqc.json  example_rsa.json
scripts/: generate_example_results.py  generate_figures.py  run_simulation.py  shor_demo_pennylane.py
src/leap_pqc_sim/: __init__.py  canonical.py  models.py
src/leap_pqc_sim/crypto/: __init__.py  base.py  mock_pqc.py  oqs_dilithium.py  rsa_pss.py
src/leap_pqc_sim/sim/: __init__.py  pipeline.py  stats.py
